# SimpleScalar

./: .gitignore  CMakeLists.txt  Makefile  cache.c  cache.h  dlite.c  main.c  sim-cache.c
libexo/: CMakeLists.txt
tests-pisa/: CMakeLists.txt
